Fixed layout issued

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,12 +19,21 @@ nav {
  */
 
 body {
+position: relative;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+main{
+  background-color: #f4f1ec;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+ 
+}
