--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,8 +1,24 @@
 nav{
+  display:flex;
   height: 120px;
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
   font-family: 'Bungee', cursive;
-  padding: 1.5em;
+  padding: 2em 1.5em;
+  justify-content: space-between;
+}
+
+.logo{
+  font-family:"Bungee", cursive; 
+}
+nav ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+nav ul li {
+  display: inline-block;
+  margin-left: -2px;
+  margin-right: 2rem;
 }
